k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rezervace-app
spec:
  selector:
    app: rezervace-app
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
